--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,11 +1,10 @@
---- 
-# do not remove 
---- 
+---
+# do not remove
+---
 
 @import 'normalize';
 @import 'code_style';
 @import 'flexible';
-
 
 /* 0. Variables
    ========================================================================== */
@@ -16,50 +15,48 @@
     --content_bg: #fff;
     --archive_font: #000;
     --archive_title: #46a891;
-    --archive_title_hover: #87CDBD;
-    --name_font: #FFAA00;
+    --archive_title_hover: #87cdbd;
+    --name_font: #ffaa00;
     --job_font: #003845;
     --nav_font: #8d7edc;
-    --nav_font_hover: #D4CEF2;
+    --nav_font_hover: #d4cef2;
     --shadow_color: rgba(160, 160, 160, 0.05);
     --post_title: #003845;
     --post_date: #003845;
     --post_text: #4c4c4c;
     --post_h3: #4c4c4c;
     --post_link: #46a891;
-    --post_link_hover: #87CDBD;
-    --inlinecode_text: #FFAA00;
+    --post_link_hover: #87cdbd;
+    --inlinecode_text: #ffaa00;
     --blockquote: #333;
     --footer_font: #858585;
     --footer_font_a: #000;
     --border_radius: 15px;
-
 }
 
 @mixin darkMode {
-    --bg_color: #1C1C1E;
-    --header_bg: #24292E;
-    --content_bg: #2F3437;
-    --archive_font: #CACCCE;
+    --bg_color: #1c1c1e;
+    --header_bg: #24292e;
+    --content_bg: #2f3437;
+    --archive_font: #caccce;
     --archive_title: #46a891;
-    --archive_title_hover: #87CDBD;
-    --name_font: #FFAA00;
-    --job_font: #CACCCE;
+    --archive_title_hover: #87cdbd;
+    --name_font: #ffaa00;
+    --job_font: #caccce;
     --nav_font: #8d7edc;
-    --nav_font_hover: #D4CEF2;
+    --nav_font_hover: #d4cef2;
     --shadow_color: rgba(0, 0, 0, 1);
     --post_title: #46a891;
     --post_date: #e9ead7;
-    --post_text: #CACCCE;
+    --post_text: #caccce;
     --post_h3: #fff;
     --post_link: #8d7edc;
-    --post_link_hover: #D4CEF2;
-    --inlinecode_text: #FFAA00;
-    --blockquote: #CACCCE;
+    --post_link_hover: #d4cef2;
+    --inlinecode_text: #ffaa00;
+    --blockquote: #caccce;
     --footer_font_a: #d1d1d1;
     --border_radius: 1px;
 }
-
 
 /* 1. General
    ========================================================================== */
@@ -79,31 +76,30 @@ html {
 
 html,
 html.light {
-    @include lightMode
+    @include lightMode;
 }
 
 html.dark {
-    @include darkMode
+    @include darkMode;
 }
 
-@media (prefers_color: light),
-(prefers_color: no-preference) {
+@media (prefers_color: light), (prefers_color: no-preference) {
     html {
-        @include lightMode
+        @include lightMode;
     }
 
     html.dark {
-        @include darkMode
+        @include darkMode;
     }
 }
 
 @media (prefers_color: dark) {
     html {
-        @include darkMode
+        @include darkMode;
     }
 
     html.light {
-        @include lightMode
+        @include lightMode;
     }
 }
 
@@ -111,7 +107,9 @@ body {
     height: 100%;
     font-weight: normal;
     font-style: normal;
-    font-family: -apple-system, BlinkMacSystemFont, 'Titillium Web', "Segoe UI", Roboto, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, 'Titillium Web', 'Segoe UI',
+        Roboto, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol';
     margin: 0;
     padding: 0;
     background-color: var(--bg_color);
@@ -150,7 +148,7 @@ img {
     @include breakpoint(medium) {
         margin-left: auto;
         margin-right: auto;
-        max-width: 960px;
+        max-width: 1200px;
         padding-top: 2.5rem;
     }
 
@@ -178,15 +176,13 @@ img {
             float: none;
         }
     }
-    }
+}
 
-    @include mobile-only {
-        margin-top: 2rem;
-        margin-left: 1rem;
-        margin-right: 1rem;
-    }
-
-    
+@include mobile-only {
+    margin-top: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
 
 ::-webkit-scrollbar {
     width: 8px;
@@ -213,7 +209,6 @@ img {
     font-size: 1.3rem;
     margin-top: 7rem;
 }
-
 
 /* 2. Archive
    ========================================================================== */
@@ -280,7 +275,6 @@ img {
     margin-bottom: 0.6rem;
 }
 
-
 /* 3. Header
    ========================================================================== */
 
@@ -302,7 +296,6 @@ img {
         height: 100%;
         min-height: 100%;
     }
-
 }
 
 .header_content {
@@ -326,6 +319,7 @@ img {
     height: 7rem;
     width: 7rem;
     border-radius: 50%;
+    margin-top: 25px;
 
     img {
         @extend .header_circle;
@@ -352,38 +346,36 @@ img {
 
 .header_job {
     display: block;
-    margin-top: .1rem;
+    margin-top: 0.1rem;
     color: var(--job_font);
     font-size: 0.75em;
     font-weight: 700;
 }
 
-.theme_changer {   
+.theme_changer {
     cursor: pointer;
     input {
         display: none;
 
-        &+div {
+        & + div {
             background: url('../img/m.png') no-repeat center center;
             width: 30px;
             height: 30px;
             border-radius: 50%;
             position: relative;
-            transition: box-shadow .5s ease 0s, transform .5s ease .1s;
+            transition: box-shadow 0.5s ease 0s, transform 0.5s ease 0.1s;
 
             &:before {
-                
                 content: '';
                 width: inherit;
                 height: inherit;
                 position: absolute;
                 left: 0;
                 top: 0;
-                transition: background .5s ease;
+                transition: background 0.5s ease;
             }
 
             &:after {
-                
                 background: url('../img/s.png') no-repeat center;
                 border-radius: 50%;
                 content: '';
@@ -391,16 +383,16 @@ img {
                 height: 30px;
                 position: absolute;
                 transform: scale(0);
-                transition: all .5s ease;
+                transition: all 0.5s ease;
             }
         }
 
-        &:checked+div {
-            transform: scale(.5);
+        &:checked + div {
+            transform: scale(0.5);
 
             &:after {
                 transform: scale(2);
-                transition: transform .5s ease .15s;
+                transition: transform 0.5s ease 0.15s;
             }
         }
     }
@@ -433,6 +425,7 @@ img {
     display: inline-block;
     *display: inline;
     zoom: 1;
+    margin-bottom: 3px;
 
     & a {
         color: var(--nav_font);
@@ -445,7 +438,6 @@ img {
     }
 
     @include mobile-only {
-
         &:after {
             content: '/';
             color: var(--nav_font);
@@ -467,7 +459,7 @@ img {
 
     @include mobile-only {
         display: block;
-        margin: -.5rem;
+        margin: -0.5rem;
     }
 
     @include breakpoint(medium) {
@@ -495,8 +487,6 @@ img {
     }
 }
 
-
-
 /* 4. Post
    ========================================================================== */
 
@@ -504,7 +494,7 @@ img {
     color: var(--post_text);
 
     @include breakpoint(medium) {
-        max-width: 33rem;
+        max-width: 90%;
         margin-top: 5rem;
     }
 
@@ -574,7 +564,7 @@ img {
 
     h4 {
         margin-top: 2rem;
-        margin-bottom: -.5rem;
+        margin-bottom: -0.5rem;
         color: var(--post_h3);
     }
 
@@ -607,10 +597,12 @@ img {
 
     code {
         color: var(--inlinecode_text);
-        padding: .1em .4em;
+        padding: 0.1em 0.4em;
         border-radius: 5px;
-        font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-        font-size: .85rem;
+        font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono,
+            DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
+            serif;
+        font-size: 0.85rem;
     }
 
     pre code {
@@ -694,7 +686,6 @@ img {
     margin-top: 8rem;
     padding: 10px;
 }
-
 
 /* 6. Footer
    ========================================================================== */
